package NYT.NTabletNode.NProto;

import "yt/core/misc/proto/guid.proto";
import "yt/ytlib/transaction_client/proto/action.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqHandleTransactionBarrier
{
    required uint64 timestamp = 1;
}

message TReqRegisterTransactionActions
{
    required NYT.NProto.TGuid transaction_id = 1;
    required uint64 transaction_start_timestamp = 2;
    required int64 transaction_timeout = 3;
    required uint64 signature = 4;
    repeated NYT.NTransactionClient.NProto.TTransactionActionData actions = 5;
    optional string user = 6;
    optional string user_tag = 7;
}
